add title to task states
